Fix title letter spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -40,6 +40,7 @@ img[alt=Lum] {
 
 .post-title {
 	line-height: 1.2;
+	letter-spacing: 0px;
 }
 
 .site-header {
